added hours and logo image

--- a/cool.html
+++ b/cool.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
-<body>
-<!DOCTYPE html>
+
+
 <html lang="en">
 
 <head>
@@ -9,25 +9,39 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Navbar with Dropdown</title>
   <link rel="stylesheet" href="style.css">
+  <script src="jquery-3.7.1.min.js"></script>
 </head>
-<body>
-    
 
+
+<body>
 
   <div class="navbar">
-    <div class="logo"> url("Untitleddesign-2.png")</div>
+    <div class="logo">
+      <img src="chints.png">
+    </div>
     <div class="nav-links">
-      <a href="menu.html"> Menu</a>
+      <a href="menu.html">Menu</a>
       <a>About</a>
-
-        </div>
-      </div>
-
-
+      <a href="#" id="hoursButton">Hours</a>
     </div>
   </div>
 
+  <div id="hoursModal" class="modal">
+    <div class="modal-content">
+      <span class="close">&times;</span>
+      <h3>Our Hours</h3>
+      <p>Monday - Friday: 9 AM - 5 PM</p>
+      <p>Saturday: 10 AM - 4 PM</p>
+      <p>Sunday: Closed</p>
+    </div>
+  </div>
+  
+
+
+
   <h1>Chintz Culinary Experience</h1>
+
+</body>
 
 
 
@@ -60,7 +74,7 @@
   </div>
 -->
 
-
+<script src="scripts.js"></script>
 </body>
 </html>
 
@@ -68,7 +82,6 @@
 
 
 
-</body>
 
 
 
@@ -87,4 +100,4 @@
 
 
 
-</html>
+
