--- a/menu.html
+++ b/menu.html
@@ -13,11 +13,15 @@
 
 
 
+
   <div class="navbar">
-    <div class="logo">Chintz Culinary Experience</div>
+    <div class="logo"> 
+      <img src="chints.png">
+    </div>
     <div class="nav-links">
       <a href="cool.html"> Home</a>
       <a>About</a>
+      <a>
 
         </div>
       </div>
@@ -25,7 +29,11 @@
 
     </div>
   </div>
-<h1>Uhhhh</h1>
+<h1>Chintz Culinary Experience</h1>
+
+
+
+
 
 
 
