--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Navbar with Dropdown</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="StyleSheet/style.css">
 </head>
 
 <body>
