fixed the weird img and formatting things and added best sellers carousel

--- a/menu.html
+++ b/menu.html
@@ -34,7 +34,9 @@
       <p>Sunday: Closed</p>
     </div>
   </div>
-<h1>Menu</h1>
+<h1 class="niggu">Menu</h1>
+
+<h2>Best Sellers</h2>
 <div class="carousel">
   <div class="slides" id="slides">
     <div class="slide">
