--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
   <div class="navbar">
     <div class="logo">Chintz Culinary Experience</div>
     <div class="nav-links">
-      <a href="cool.html"> Home</a>
+      <a href="index.html"> Home</a>
       <a>About</a>
 
         </div>
