--- a/inxex.html
+++ b/inxex.html
@@ -20,11 +20,13 @@
       <img src="chints.png">
     </div>
     <div class="nav-links">
+      <a href="index.html" class="active">Home</a>
       <a href="menu.html">Menu</a>
       <a>About</a>
       <a href="#" id="hoursButton">Hours</a>
     </div>
   </div>
+
 
   <div id="hoursModal" class="modal">
     <div class="modal-content">
@@ -40,7 +42,7 @@
 
 
 
-  <h1>Chintz Culinary Experience</h1>
+  <h1 class="indexh1">Chintz Culinary Experience</h1>
 
 
 
