--- a/menu.html
+++ b/menu.html
@@ -9,7 +9,7 @@
    <script src="jquery-3.7.1.min.js"></script>
 </head>
 
-<body>
+<body class="menuBody">
 
 
 
@@ -19,9 +19,11 @@
       <img src="chints.png">
     </div>
     <div class="nav-links">
-      <a href="cool.html">Home</a>
+      <a href="index.html">Home</a>
+      <a href="menu.html" class="active">Menu</a>
       <a>About</a>
       <a href="#" id="hoursButton">Hours</a>
+      
     </div>
   </div>
 
@@ -34,9 +36,9 @@
       <p>Sunday: Closed</p>
     </div>
   </div>
-<h1 class="niggu">Menu</h1>
+<h1 class="niggu">Best Sellers</h1>
 
-<h2>Best Sellers</h2>
+
 <div class="carousel">
   <div class="slides" id="slides">
     <div class="slide">
